# pi_agent_rust

./: .gitignore  AGENTS.md  BENCHMARKS.md  BENCHMARK_COMPARISON_BETWEEN_RUST_VERSION_AND_ORIGINAL__GPT.md  BENCHMARK_COMPARISON_BETWEEN_RUST_VERSION_AND_ORIGINAL__OPUS.md  CONFORMANCE.md  Cargo.toml  EXISTING_PI_STRUCTURE.md  EXTENSIONS.md  FEATURE_PARITY.md  PLAN_TO_COMPLETE_PORT.md  README.md  UPGRADE_LOG.md  build.rs  findings.jsonl  install.sh  storage.sqlite3  ubs_crit.jsonl  uninstall.sh  verify
.beads/: issues.jsonl
benches/: extensions.rs  session_save.rs  system.rs  tools.rs
docs/: BRANCH_PROTECTION.md  EXTENSION_CANDIDATES.md  EXTENSION_CAPTURE_SCENARIOS.md  EXTENSION_POPULARITY_CRITERIA.md  EXTENSION_REFRESH_CHECKLIST.md  EXTENSION_SAMPLE.md  EXTENSION_SAMPLING_MATRIX.md  LEGACY_EXTENSION_RUNNER.md  TEST_COVERAGE_MATRIX.md  capability-prompts.md  ci-operator-runbook.md  coverage-baseline-map.json  dropin-feature-inventory-matrix.json  evidence-contract-schema.json  ext-compat.md  extension-api-matrix.json  extension-artifact-provenance.json  extension-catalog.json  extension-catalog.schema.json  extension-conformance-test-plan.json  extension-inclusion-list.json  extension-master-catalog.json  extension-onboarding-queue.json  extension-onboarding-queue.md  extension-priority.json  extension-research-playbook.json  extension-sample.json  franken-node-claim-gating-contract.json  franken-node-kernel-extraction-boundary-manifest.json  franken-node-mission-contract.json  franken-node-multi-tier-execution-contract.json  integrator-migration-playbook.md  non-mock-rubric.json  packages.md  parity-certification.json  program-governance.md  provider-audit-evidence-index.json  provider-auth-failure-signatures.json  provider-auth-troubleshooting.md  provider-baseline-audit.json  (+29 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_message_deser.rs  fuzz_message_roundtrip.rs  fuzz_session_jsonl.rs  fuzz_smoke.rs
proptest-regressions/: extensions.txt  tools.txt
scripts/: bench_extension_workloads.sh  check_branch_protection.sh  check_conformance_regression.py  ci_conformance_retry.sh  conformance_trend.py  provider_registry_guardrails.sh  release_gate.sh  smoke.sh  test_auto_repair.sh  validate_fuzz_p1.sh  validate_fuzz_p2.sh
src/: agent.rs  agent_cx.rs  app.rs  auth.rs  autocomplete.rs  buffer_shim.rs  cli.rs  compaction.rs  compaction_worker.rs  config.rs  (+60 more)
(+759 files in other folders)
